--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
     "normalize.css": "^8.0.1",
     "react": "^18",
