--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.4",
     "normalize.css": "^8.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "@types/node": "^20",
