--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next": "14.2.4",
     "normalize.css": "^8.0.1",
     "react": "^18",
-    "react-dom": "^18",
-    "swiper": "^11.1.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -31,6 +30,7 @@
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "sass": "^1.77.5",
+    "swiper": "^11.1.4",
     "typescript": "^5"
   },
   "lint-staged": {
