--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@mantine/core": "^7.11.2",
+    "@mantine/hooks": "^7.11.2",
+    "@mantine/modals": "^7.11.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "clsx": "^2.1.1",
