добавил верстку карты

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "@mantine/core": "^7.11.2",
     "@mantine/hooks": "^7.11.2",
     "@mantine/modals": "^7.11.2",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "clsx": "^2.1.1",
-    "next": "14.2.4",
+    "next": "^14.2.14",
     "normalize.css": "^8.0.1",
     "react": "^18",
     "react-dom": "^18"
