Контент для карты

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,11 +9,10 @@
     "module": "esnext",
         // "moduleResolution": "bundler",
     "moduleResolution": "node",
-    "moduleResolution": "node",
     // "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "plugins": [
       {
