--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": "error",
+    "endOfLine": "off",
     "no-console": "error",
     "@typescript-eslint/no-unused-vars": "error"
   }
