Добавил правило для стиля переноса строк в ESLint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "prettier/prettier": "error",
     "endOfLine": "off",
     "no-console": "error",
+    "linebreak-style": ["error", "unix"],
     "@typescript-eslint/no-unused-vars": "error"
   }
 }
